Fixed some styles code

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                     </div>
                 </nav>
                 <div class="header__description">
-                    <h1 class="header__title section-title">
+                    <h1 class="header__title section__title">
                         The first zero commission blockchain-based app for cryptocurrency and stock trading
                     </h1>
                     <div class="header__text">
@@ -63,7 +63,7 @@
                             <img src="/assets/images/phones/phone-1.jpg" alt="" class="trading__image" />
                         </div>
                         <div class="trading__description">
-                            <h2 class="trading-power__title section-title">
+                            <h2 class="trading-power__title section__title">
                                 Elevate your trading to the next level wherever you are
                             </h2>
                             <div class="trading__text">
@@ -88,7 +88,7 @@
                 <section class="trading-reliability trading__section section">
                     <div class="trading__container container">
                         <div class="trading__description">
-                            <h2 class="trading__title section-title">
+                            <h2 class="trading__title section__title">
                                 Start trading crypto risk free for the first time
                             </h2>
                             <div class="trading__text">
@@ -118,7 +118,7 @@
             <section class="about section">
                 <div class="about__container container">
                     <div class="about__description">
-                        <h2 class="about__title section-title">
+                        <h2 class="about__title section__title">
                             The revolution in mobile trading and investing apps
                         </h2>
                         <div class="about__text">
@@ -190,7 +190,7 @@
             <section class="early-investor section">
                 <div class="container">
                     <div class="early-investor__description">
-                        <h2 class="early-investor__title section-title">
+                        <h2 class="early-investor__title section__title">
                             Become an early investor and reserve your 50% discount
                         </h2>
                         <a href="#" class="button button--filled">Register for ICO</a>
@@ -200,7 +200,7 @@
             <section class="statistic section">
                 <div class="statistic__container container">
                     <div class="statistic__description">
-                        <h2 class="section-title">The Fortuna Utility token</h2>
+                        <h2 class="section__title">The Fortuna Utility token</h2>
                         <div class="statistic__text">
                             <p>
                                 The MVT token is the project’s native token that will be used as the main currency in
@@ -354,7 +354,7 @@
             <section class="product-map section">
                 <div class="container product-map__container">
                     <div class="product-map__description">
-                        <h2 class="product-map__title section-title">
+                        <h2 class="product-map__title section__title">
                             Roadmap
                         </h2>
                     </div>
@@ -421,7 +421,7 @@
             <section class="section teams">
                 <div class="container">
                     <section class="teams__section">
-                        <h2 class="section-title">Team</h2>
+                        <h2 class="section__title">Team</h2>
                         <div class="team-members swiper" id="team-swiper">
                             <div class="team-members__list swiper-wrapper">
                                 <div class="team-member swiper-slide">
@@ -473,7 +473,7 @@
                         </div>
                     </section>
                     <section class="teams__section">
-                        <h2 class="section-title">Advisory Team</h2>
+                        <h2 class="section__title">Advisory Team</h2>
                         <div class="team-members swiper" id="advisory-team-swiper">
                             <div class="team-members__list swiper-wrapper">
                                 <div class="team-member swiper-slide">
@@ -542,7 +542,7 @@
             <section class="early-adopter section">
                 <div class="container">
                     <div class="early-adopter__description">
-                        <h2 class="early-adopter__title section-title">Become an early adopter</h2>
+                        <h2 class="early-adopter__title section__title">Become an early adopter</h2>
                         <div class="early-adopter__text">
                             <p>First movers get up to 50% bonus on their investment.</p>
                         </div>
